Increased width of extension popup and fixed slider overlapping label text by using an outside span

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.switch-group {
+  display: flex;
+  gap:8px;
+  align-items: center;
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
@@ -60,3 +66,4 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
